# mrald

./: .gitignore  LICENSE  SECURITY-fr.md  SECURITY.md
docs/: README.md
docs/catalog/en/: catalog-en.md
docs/catalog/fr/: catalog-fr.md
docs/contrib/en/: contrib-en.md
docs/contrib/fr/: contrib-fr.md
docs/design/: BUILD_PIPELINE.md  STANDARD_RULES.md
docs/donations/en/: donations-en.md
docs/donations/fr/: donations-fr.md
docs/roadmap/en/: roadmap-en.md
docs/roadmap/fr/: roadmap-fr.md
docs/sponsors/en/: sponsors-en.md
docs/sponsors/fr/: sponsors-fr.md
docs/support/en/: support-en.md
docs/support/fr/: support-fr.md
docs/v1.0.0/en/: course-1-variables-en.md  glossary-en.md  hello-world-en.md  learn-by-coding-en.md  preface-en.md  release-notes-en.md  toc-en.md
docs/v1.0.0/fr/: course-1-variables-fr.md  glossary-fr.md  hello-world-fr.md  learn-by-coding-fr.md  preface-fr.md  release-notes-fr.md  toc-fr.md
examples/: README.md
templates/syntax/: mrald.1.0.0.nanorc  mrald.1.0.0.toml  mrald.1.0.0.yaml
tests/: README.md
toolchain/compilers/frontend/mrald-craft/: BUILD.sh  README.md  VERSION.md
toolchain/compilers/frontend/mrald-craft/cli/: CMakeLists.txt  main.cpp
toolchain/compilers/frontend/mrald-craft/cli/private/: cli.cpp  cli_args.cpp  cli_args.hpp  cli_build.hpp  cli_cmd.hpp  cli_lang.hpp  cli_tool.cpp  cli_tool.hpp  cli_user.cpp  cli_user.hpp
toolchain/compilers/frontend/mrald-craft/cli/public/: cli.hpp
toolchain/compilers/frontend/mrald-craft/lexer/: lexer.cpp  lexer.hpp
toolchain/compilers/frontend/mrald-craft/lexer/private/: lexer.cpp
toolchain/compilers/frontend/mrald-craft/lexer/public/: lexer.hpp  lexer_load_mode.hpp  lexer_token.hpp  lexer_token_class.hpp  lexer_token_class_comment.hpp  lexer_token_class_keyword.hpp  lexer_token_class_link.hpp  lexer_token_class_number.hpp  lexer_token_class_number_sign.hpp  lexer_token_class_symbol.hpp  lexer_token_class_word.hpp  lexer_token_col.hpp  lexer_token_loc.hpp
toolchain/compilers/frontend/mrald-craft/license/: license.cpp  license.hpp
toolchain/compilers/frontend/mrald-craft/parser/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp
toolchain/compilers/frontend/mrald-craft/scanner/: CMakeLists.txt  main.cpp  scanner.cpp  scanner.hpp
